--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       &copy; 2024 Carsten Dashnaw | <a href="#">Contact me</a>
         
         <!-- SOCIAL MEDIA LINKS -->
-        <ul>
+        <ul class = "socials">
             <li><a href="linkedin.com" target="_blank"><img src="images/linkedin_icon.png" alt="linkedin icon"></a></li>
             <li><a href="twitter.com" target="_blank"><img src="images/twitter_icon.png" alt="twitter icon"></a></li>
             <li><a href="facebook.com" target="_blank"><img src="images/facebook_icon.png" alt="facebook icon"></a></li>
