--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         
         <!-- SOCIAL MEDIA LINKS -->
         <ul class = "socials">
-            <li><a href="linkedin.com" target="_blank"><img src="images/linkedin_icon.png" alt="linkedin icon"></a></li>
-            <li><a href="twitter.com" target="_blank"><img src="images/twitter_icon.png" alt="twitter icon"></a></li>
-            <li><a href="facebook.com" target="_blank"><img src="images/facebook_icon.png" alt="facebook icon"></a></li>
-            <li><a href="youtube.com" target="_blank"><img src="images/youtube_icon.png" alt="youtube icon"></a></li>
-            <li><a href="instagram.com" target="_blank"><img src="images/instagram_icon.png" alt="instgram icon"></a></li>
+            <li><a href="www.linkedin.com" target="_blank"><img src="images/linkedin_icon.png" alt="linkedin icon"></a></li>
+            <li><a href="www.twitter.com" target="_blank"><img src="images/twitter_icon.png" alt="twitter icon"></a></li>
+            <li><a href="www.facebook.com" target="_blank"><img src="images/facebook_icon.png" alt="facebook icon"></a></li>
+            <li><a href="www.youtube.com" target="_blank"><img src="images/youtube_icon.png" alt="youtube icon"></a></li>
+            <li><a href="www.instagram.com" target="_blank"><img src="images/instagram_icon.png" alt="instgram icon"></a></li>
         </ul>
     </footer>
   </body>
