--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <main>
           <p>Introducing, my Web Portfolio!</p>
           <p>I am a senior at Norwood-Norfolk Central School and at Seaway Technical Education Center with 2 years of computer programming experience, a mix of HTML, CSS, Python, and Lua. I am going to college at SUNY Canton for further education in Game Design Development. My skills more focus on the programming side of game design. </p>
-          <p>To learn more about my work history, check out my <a href = "images/Resume.pdf" target="_blank" download>resume</a>. If you want to download my resume then please do so, other than that thanks for stopping by!</p>
+          <p>To learn more about my work history, check out my <a href = "images/Resume.pdf" target="_blank">resume</a>. If you want to download my resume then please do so, other than that thanks for stopping by!</p>
         </main>
       </div>
     </div>
