--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
     <!-- //  FOOTER INFO, SOCIAL MEDIA  // -->
     <footer>
-      &copy; 2024 Carsten Dashnaw | <a href="#">Contact me</a>
+      &copy; 2024 Carsten Dashnaw <a href="#">Contact me</a>
         
         <!-- SOCIAL MEDIA LINKS -->
         <ul class = "socials">
